# playground

./: .gitignore  README.md
cc/: CMakeLists.txt  README.md  main.cc  mcts.cc
cc/games/: connect_four.cc  connect_four.h  game.h  game_manager.cc  game_manager.h  tic_tac_toe.cc  tic_tac_toe.h  tictactoe.cc  tictactoe.h
cc/mcts/: mcts.cc  mcts.h
cc/tests/: mcts_test.cc  test_main.cc  tic_tac_toe_test.cc
